# rpic-lang

./: .gitignore  .zenodo.json  ACKNOWLEDGMENTS.md  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml  crates-io.yml  docs.yml  npm.yml  python.yml  r.yml  release.yml  winget.yml
assets/: logo.pic
bindings/js/: README.md  index.d.ts  index.js  package.json  player.d.ts
bindings/js/test/: smoke-math.mjs  smoke.mjs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/src/: lib.rs
bindings/python/tests/: test_rpic.py
bindings/r/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.md  cran-comments.md
bindings/r/R/: extendr-wrappers.R  rpic.R
bindings/r/man/: rpic-package.Rd  rpic_knitr_engine.Rd  rpic_manifest.Rd  rpic_pdf.Rd  rpic_png.Rd  rpic_register_knitr.Rd  rpic_svg.Rd
bindings/r/src/: Makevars  Makevars.in  Makevars.win.in  entrypoint.c  rpic-win.def
bindings/r/src/rust/: Cargo.toml  document.rs
bindings/r/src/rust/src/: lib.rs
crates/capi/: Cargo.toml  rpic.h
crates/capi/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/assets/: player.js
crates/cli/src/: html.rs  main.rs
crates/cli/tests/: corpus.rs  html.rs
crates/core/: Cargo.toml
crates/core/src/: ast.rs  color.rs  diagnostic.rs  eval.rs  geom.rs  ir.rs  lexer.rs  lib.rs  math.rs  parser.rs  svg.rs  token.rs
crates/core/src/eval/: build.rs  helpers.rs  resolve.rs  tests.rs
crates/core/src/std/: circuits.pic
crates/render/: Cargo.toml
crates/render/fonts/: LICENSE
crates/render/src/: lib.rs  math.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: dpic-compat-audit.md  extensions.md  pikchr.md  pstricks.md  svg-styles.md  tex-labels.md
docs/issues/: 0001-language-bindings.md  0002-packaging.md  0003-parser-place-dot-coord.md
examples/: brace.pic  brace_labeloffset.pic  brace_pos.pic  brace_sides.pic  brace_style.pic  brace_width.pic  control.pic  ease-gallery.pic  fit.pic  flashlight.pic  hatch.pic  logic.pic  opacity.pic  pipeline.pic  rlc.pic
examples/dpic/: README.md  STATUS.md
examples/dpic/shapes/: trellis.pic  trochoid.pic
examples/figuras/: README.md  circuit_macros.pic  fig01.pic  fig02.pic  fig03.pic  fig04.pic  fig05.pic  fig06.pic  fig07.pic  fig08.pic  fig09.pic  fig10.pic  fig11.pic  fig12.pic  fig13.pic  fig14.pic  fig15.pic  fig16.pic  fig17.pic  fig18.pic  fig19.pic  fig20.pic  fig21.pic  fig22.pic  fig23.pic  fig24.pic  fig25.pic  fig26.pic  fig27.pic  fig28.pic  fig29.pic  fig30.pic  fig31.pic  fig32.pic  fig33.pic  fig34.pic  fig35.pic  fig36.pic  fig37.pic  fig38.pic  (+10 more)
examples/lib3d/: README.md  frame.pic  lib3d.pic  views.pic
packaging/: README.md  update-hashes.sh
packaging/homebrew/: rpic.rb
packaging/scoop/: rpic.json
packaging/winget/: milkway.rpic.installer.yaml  milkway.rpic.locale.en-US.yaml  milkway.rpic.yaml
paper/: paper.bib  paper.md
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/src/assets/: hero.pic
site/src/assets/examples/: first-anchors.pic  first-chain.pic
site/src/components/: AnimatedPic.astro  Callout.astro  DrawValuesPic.astro  EaseVisualizer.astro  EaseVisualizerPic.astro  ExampleToolbar.astro  Gallery.astro  PerfBench.astro  PerfDistribution.astro  PicExample.astro  PicFamilyTable.astro  PicFigure.astro  nav.ts
site/src/layouts/: DocsLayout.astro  MdxLayout.astro
site/src/lib/: ease-pic.ts  rpic.ts  studio.ts
site/src/pages/: index.astro
site/src/pages/docs/: attributes.mdx  bindings.mdx  blocks.mdx  circuits.mdx  first-picture.mdx  gallery.mdx  installation.mdx  labels-and-ordinals.mdx  performance.mdx  pic-family.mdx  positioning.mdx  primitives.mdx  spec.mdx  variables-and-macros.mdx
site/src/pages/docs/extensions/: animate.mdx  behind.mdx  brace.mdx  canvas.mdx  class.mdx  close.mdx  dot.mdx  fit.mdx  font.mdx  gradient.mdx  hatch.mdx  link.mdx  margin.mdx  opacity.mdx  rotated.mdx  texlabels.mdx
site/src/styles/: global.css
tools/bench/: .gitignore  README.md  gen.py  run.sh
tools/highlight/: .gitignore  README.md  demo.mjs  package-lock.json  package.json  rpic.tmLanguage.json  test.mjs  themes-demo.mjs
tools/highlight/themes/: rpic-forest-dark.json  rpic-forest-light.json
web/: app.js  build.sh  index.html
