# rpic — a modern, SVG/PNG/PDF-first reimplementation of the pic graphics
# language (Kernighan 1982) in Rust, descended in spirit from dpic (J.D.
# Aplevich).
[workspace]
resolver = "2"
# `crates/wasm` and `bindings/python` are intentionally standalone workspaces:
# wasm keeps npm-specific release/profile settings, and python keeps PyO3 out of
# the lean native workspace. Keep CI lint steps explicit for both.
members = [
    "crates/core",
    "crates/render",
    "crates/cli",
    "crates/capi",
]

[workspace.package]
version = "0.6.2"
edition = "2024"
license = "BSD-2-Clause"
authors = ["André Leite <leite@de.ufpe.br>"]
repository = "https://github.com/milkway/rpic-lang"

[profile.release]
opt-level = 3
lto = "thin"
