[package]
name = "rpic-capi"
description = "Stable C ABI for rpic — the foundation for non-Rust bindings (R, Python, etc.)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["pic", "svg", "ffi", "graphics", "c-api"]
categories = ["graphics", "external-ffi-bindings"]

[lib]
name = "rpic"
crate-type = ["cdylib", "staticlib"]

[dependencies]
rpic-core = { version = "0.9.0", path = "../core" }
rpic-render = { version = "0.9.0", path = "../render" }
