[package]
name = "rpic-cli"
description = "Command-line front-end for rpic (the pic graphics language → SVG/PNG/PDF)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rpic"
path = "src/main.rs"

[dependencies]
rpic-core = { path = "../core" }
rpic-render = { version = "0.0.1", path = "../render" }
