[package]
name = "rpic-core"
description = "Core engine for rpic: lexer, parser, geometry, and SVG/PNG/PDF backends for the pic graphics language."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["pic", "svg", "diagram", "graphics", "drawing"]
categories = ["graphics", "parser-implementations"]

[lib]
name = "rpic_core"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
