# Standalone package (its own [workspace]) so the main native workspace stays
# lean. Build with: wasm-pack build crates/wasm --target web --out-dir ../../web/pkg
[package]
name = "rpic-wasm"
description = "WASM bindings for rpic: compile pic source to an SVG + animation-manifest JSON bundle in the browser."
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
authors = ["André Leite <leite@de.ufpe.br>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
rpic-core = { path = "../core" }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true

[workspace]
