# Standalone package (its own [workspace]) so the main native workspace stays
# lean. Build with: wasm-pack build crates/wasm --target web --out-dir ../../web/pkg
[package]
name = "rpic-wasm"
description = "WASM bindings for rpic: compile pic source to an SVG + animation-manifest JSON bundle in the browser."
version = "0.11.1"
edition = "2024"
license = "BSD-2-Clause"
authors = ["André Leite <leite@de.ufpe.br>"]

[lib]
crate-type = ["cdylib"]

[features]
# Opt-in `texlabels` math renderer (RaTeX via rpic-render, rasterizer left
# out). Off by default: the math build ships as a second, lazily fetched npm
# artifact so nobody pays its size unless they use `$…$` labels.
math = ["dep:rpic-render"]

[dependencies]
rpic-core = { path = "../core" }
rpic-render = { path = "../render", default-features = false, features = ["math"], optional = true }
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true

[workspace]
