[package]
name = 'rpic'
publish = false
version = '0.1.0'
edition = '2024'
rust-version = '1.85'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'rpic'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '*'
rpic-core = "0.0.2"
rpic-render = "0.0.2"

[profile.release]
lto = true
codegen-units = 1

[workspace]
